<resources>
    <string name="app_name">Udacity Test App</string>

    <string name="roll">Roll</string>
    <string name="textview_text">1</string>
    <string name="name">Luis Barroso</string>
    <string name="imageview_description_star_in_the_screen">Star in the screen</string>
    <string name="textview_bio">Hi, my name is Luis.
        \n
        \nI\'m a senior mobility developer at Accenture.
        \n
        \nI had been working for companies like BBVA, Renfe, Endesa and El Corte Inglés.
        \n
        \nThe languages that I usually use for develop are Java, Kotlin and XML. Other skills and technologies that i
        have are Git/GitFlow, Retrofit, Google Maps, Swagger, Picasso, Scrum/Agile.
        \n
        \nFinally but not least important, I am interested in everything related to Android.
    </string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2_part_1">Lesson 2 Part 1</string>
    <string name="lesson_2_part_2">Lesson 2 Part 2</string>
    <string name="what_are_you_nickname">What are your nickname</string>
    <string name="done">Done</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="text_hot_to_play">How to play:</string>
    <string name="tap_boxes_to_play">Tap the screen and buttons</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>

    <!-- Lesson 3 Navigation-->
    <string name="lesson_3_navigation">Lesson 3 Navigation</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn
        in Android development.\n\nConsider modifying the questions and graphics to make this game your own!
    </string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance
        to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using
        up or back from within the game screen, and this will also end your game.
    </string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <!-- Lesson 4 Life Cycle-->
    <string name="lesson_4_life_cycle">Lesson 4 life Cycle</string>
    <string name="dollar_sign">$</string>
    <string name="zero">0</string>
    <string name="dessert_sold">Desserts Sold</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Lesson 5 App Architecture UI Layer-->
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="word_is">The word is…</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>

</resources>
